fixed sum endpoints